--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Catalogos/CentroCosto.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Catalogos/CentroCosto.cshtml
@@ -1,4 +1,5 @@
 ﻿
+<asp:Content ID="CentrosCostos" ContentPlaceHolderID="ctCentrosCosto" runat="server">
     <section class="content home">
         <div class="container-fluid">
             <div class="block-header">
@@ -150,7 +151,8 @@
                                             <i class="zmdi zmdi-block"></i>
                                         </div>
                                         <strong>
-                                            <asp:Label ID="lblMensajeError" runat="server" Text="" /></strong>
+                                            <asp:Label ID="lblMensajeError" runat="server" Text="" />
+                                        </strong>
                                     </div>
                                 </div>
                                 <div class="row clearfix">
@@ -167,12 +169,12 @@
                                                     </HeaderTemplate>
                                                     <ItemTemplate>
                                                         <asp:LinkButton runat="server" ID="lbEdit" CommandName="Editar" CommandArgument='<%# Eval("IdCentroCosto") %>'>
-                                                                    <i class="material-icons">edit</i>                                                                    
-                                                                    <span class="icon-name"></span>
+                                                            <i class="material-icons">edit</i>
+                                                            <span class="icon-name"></span>
                                                         </asp:LinkButton>
                                                         <asp:LinkButton runat="server" ID="lbBorrar" CommandName="Borrar" CommandArgument='<%# Eval("IdCentroCosto") %>'>
-                                                                    <i class="material-icons">delete</i>                                                                    
-                                                                    <span class="icon-name"></span>
+                                                            <i class="material-icons">delete</i>
+                                                            <span class="icon-name"></span>
                                                         </asp:LinkButton>
                                                     </ItemTemplate>
                                                 </asp:TemplateField>
@@ -202,4 +204,4 @@
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
     <script src="http://harvesthq.github.io/chosen/chosen.jquery.js"></script>
-
+</asp:Content>
