--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Requisicion/Requisiciones.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Requisicion/Requisiciones.cshtml
@@ -169,7 +169,7 @@
                                                                     <i class="material-icons">picture_as_pdf</i>
                                                                     <span class="icon-name"></span>
                                                                 </a>
-                                                                <a id="lbAutoriza" href="@Url.Action("RequisicionAlternativa", "Requisicion", new { Id = req.IdRequisicion, estatus = req.IdRequisicionEstatus })">
+                                                                <a id="lbAutoriza" href="@Url.Action("RequisicionAutorizacion", "Requisicion", new { Id = req.IdRequisicion, estatus = req.IdRequisicionEstatus })">
                                                                     <i class="material-icons">spellcheck</i>
                                                                     <span class="icon-name"></span>
                                                                 </a>
